cluster_dump/jenkins-test/Deployment.jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"jenkins","namespace":"jenkins-test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"jenkins-server"}},"template":{"metadata":{"labels":{"app":"jenkins-server"}},"spec":{"containers":[{"image":"jenkins/jenkins:lts","livenessProbe":{"failureThreshold":5,"httpGet":{"path":"/login","port":8080},"initialDelaySeconds":90,"periodSeconds":10,"timeoutSeconds":5},"name":"jenkins","ports":[{"containerPort":8080," [...]
  creationTimestamp: "2022-06-15T12:12:57Z"
  generation: 1
  name: jenkins
  namespace: jenkins-test
  resourceVersion: "106576062"
  uid: 700c5713-9aa5-4e23-aec2-53294aed127d
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins-server
    spec:
      containers:
      - image: jenkins/jenkins:lts
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: jenkins
        ports:
        - containerPort: 8080
          name: httpport
          protocol: TCP
        - containerPort: 50000
          name: jnlpport
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1000Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccount: jenkins-admin
      serviceAccountName: jenkins-admin
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-pv-claim
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-06-15T12:12:57Z"
    lastUpdateTime: "2022-06-15T12:14:29Z"
    message: ReplicaSet "jenkins-5db899775d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-07-08T04:16:40Z"
    lastUpdateTime: "2022-07-08T04:16:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
